--- a/Assignment 1.Rmd
+++ b/Assignment 1.Rmd
@@ -38,7 +38,7 @@ N.B. Create a GitHub repository for the Language Development in ASD set of assig
 Set the working directory (the directory with your data and code for these assignments):
 
 ```{r}
-
+setwd("~/OneDrive/3 Semester/Experimental Methods 3/Assignment 1")
 ```
 
 Load the three data sets, after downloading them from dropbox and saving them in your working directory:
@@ -47,7 +47,9 @@ Load the three data sets, after downloading them from dropbox and saving them in
 * Word data: https://www.dropbox.com/s/8ng1civpl2aux58/token_train.csv?dl=0
 
 ```{r}
-
+data1 = read.csv("demo_train.csv")
+data2 = read.csv("LU_train.csv")
+data3 = read.csv("token_train.csv")
 ```
 
 Explore the 3 datasets (e.g. visualize them, summarize them, etc.). You will see that the data is messy, since the psychologists collected the demographic data, a linguist analyzed the length of utterance in May 2014 and the same linguist analyzed the words several months later. In particular:
@@ -65,13 +67,27 @@ Tip: Look into the package data.table, or google "how to rename variables in R"
 
 ```{r}
 
+library(data.table)
+library(plyr)
+       
+names(data1)[names(data1)=="Child.ID"] <- "ID"
+names(data2)[names(data2)=="SUBJ"] <- "ID"
+names(data3)[names(data3)=="SUBJ"] <- "ID"
+       
+names(data1)[names(data1)=="Visit"] <- "Visit"
+names(data2)[names(data2)=="VISIT"] <- "Visit"
+names(data3)[names(data3)=="VISIT"] <- "Visit"
+
 ```
 
 2b. Find a way to homogeneize the way "visit" is reported. If you look into the original data sets, you will see that in the LU data and the Token data, Visits are called "visit 1" in stead of just 1 (which is the case in the demographic data set).
 Tip: There is a package called stringr, which will be very handy for you also in future assignments. We will return to this package later, but for now use the str_extract () to extract only the number from the variable Visit in each data set. Tip: type ?str_extract() after loading the library, for examples of how to use it.
 
 ```{r}
-
+library(stringr)
+data1$Visit = str_extract(data1$Visit, "\\d")
+data2$Visit = str_extract(data2$Visit, "\\d")
+data3$Visit = str_extract(data3$Visit, "\\d")
 
 ```
 
@@ -85,8 +101,10 @@ Tip: A possible solution has one line of code for each child name that is to be 
 Tip: You will have to do identical work for both data sets, so to save time on the copy/paste use the cmd+f/ctrl+f function. Add the data frame name (e.g. LU_data) in the first box, and the data frame name (e.g. Tokens_data) you wish to change it to in the other box, and press replace. 
 
 
-
 ```{r}
+data1$ID = gsub("\\.","",data1$ID)
+data2$ID = gsub("\\.","",data2$ID)
+data3$ID = gsub("\\.","",data3$ID)
 
 ```
 
