--- a/A1_P.Rmd
+++ b/A1_P.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Assignment 1 - Language Development in ASD - part 2"
-author: "Riccardo Fusaroli"
-date: "July 7, 2017"
+author: "Nanna Kildahl Mathiasen"
+date: "September 14, 2017"
 output: html_document
 ---
 
